--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -425,7 +425,7 @@ html {
   text-align: end;
   color: #fffb2c;
   margin-right:60px; /* slightly larger offset for balance */
-  font-size:1.5rem; /* increased author size slightly more */
+  font-size:1.2rem; /* increased author size slightly more */
 }
 .car{
   color:black;
@@ -513,7 +513,15 @@ html {
   flex-wrap: wrap; /* allow wrapping on smaller screens */
   gap: 40px;
 }
-
+.tamil{
+  color:yellow;
+}
+.footer .tamil-1{
+  color:white;
+  line-height:1.5;
+  font-size:1.6rem;
+  font-weight:800;
+}
 .container img,
 .container-1 img {
   width: 420px; /* reduced from 500px */
@@ -646,6 +654,7 @@ html {
   padding: 8px 40px; /* more horizontal padding so text aligns with wider footer */
   color: #fffb2c;
   text-align: start;
+  line-height:1.7;
 }
 .footer h2 {
   font-size: 1.25rem; /* a touch larger */
