--- a/src/components/solution/Solution.css
+++ b/src/components/solution/Solution.css
@@ -21,9 +21,8 @@
 }
 
 .dm-sol-card-media {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 800px;
+  height: 600px;
   border-radius: 20px;
   transition: transform 0.4s ease;
 }
@@ -88,3 +87,4 @@
     padding: 10px 25px;
   }
 }
+
