--- a/src/components/solution/Solution.css
+++ b/src/components/solution/Solution.css
@@ -25,6 +25,7 @@
   height: 600px;
   border-radius: 20px;
   transition: transform 0.4s ease;
+  box-shadow: 0 8px 16px rgba(0.4,0,0,0.4);
 }
 
 .dm-sol-card-media:hover {
@@ -87,4 +88,5 @@
     padding: 10px 25px;
   }
 }
+
 
