--- a/src/components/gratitude/Gratitude.css
+++ b/src/components/gratitude/Gratitude.css
@@ -77,7 +77,7 @@
   }
   
   .dm-grt-content-card {
-    background: rgba(0, 20, 40, 0.85);
+    background: rgba(255,255,255,0);
     padding: 50px 40px;
     border-radius: 20px;
     backdrop-filter: blur(15px);
