--- a/src/components/gratitude/Gratitude.css
+++ b/src/components/gratitude/Gratitude.css
@@ -77,13 +77,15 @@
   }
   
   .dm-grt-content-card {
-    background: rgba(255,255,255,0);
+    background: rgba(255,255,255,0.1);
     padding: 50px 40px;
     border-radius: 20px;
     border: 1px solid rgba(255, 204, 0, 0.3);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     margin: 0 auto;
     max-width: 100%;
+    backdrop-filter:blur(3px);
+      
   }
   
   .dm-grt-title {
